--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,27 +1,8 @@
-<h1>Create a new article</h1>
+<div class="push">
+<div class="container">
 
-<% if @article.errors.any? %> <!-- runs true if there are any errors  -->
-    <h2>The following errors prevented the article from being saved</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %> <!-- loops through the errors and prints them -->
-            <li><%= msg %></li>
-        <%end%>
-    </ul>
-<% end %>
-<%= form_with scope: :article, url: articles_path, local: true do |form| %>
-    <p>
-      <%= form.label :title %><br>
-      <%= form.text_field :title %>
-    </p>
+    <h1>Create a new article</h1>
+    <%= render 'form' %>
 
-    <p>
-      <%= form.label :description %><br>
-      <%= form.text_field :description %>
-    </p>
-
-    <p>
-      <%= form.submit %>
-    </p>
-
-    <p><%= link_to 'Back', articles_path%></p>
-<% end %>
+</div>
+</div>
