--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,35 @@
-<h1>Articles listing page</h1>
+<div class="push">
+  <h1 class="text-center">Articles listing page</h1>
 
-<table>
+  <div class="container text-center">
+  <%= link_to 'Create new article', new_article_path%>
+  </div>
 
-<thead>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th colspan="3">Actions</th>
-  </tr>
-</thead>
+  <div class="container">
+    <% @articles.each do |article|%>
+    <div class="row justify-content-md-center">
+      <div class="col-8 mt-4">
+        <div class="card text-center mb-5 shadow bg-white rounded">
+            <div class="card-header">
+              Stephen Filippov
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
+              <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+              <%= link_to 'View', article_path(article), class: "btn btn-outline-info" %>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>Created <%= time_ago_in_words(article.created_at)%> ago, Edited <%= time_ago_in_words(article.updated_at)%> ago</small>
+            </div>
+          </div>
+      </div>
+    </div>
+    <%end%>
+  </div>
+</div>
 
-<tbody>
-  <% @articles.each do |article|%>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to 'Show', article_path(article) %></td>
-    <td><%= link_to 'Edit', edit_article_path(article) %></td>
-    <td><%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure?"} %></td>
-  </tr>
-  <% end %>
-</tbody>
-</table>
 
-<p><%= link_to 'Create new article', new_article_path%></p>
+
+
