--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,25 @@
-<h1>Showing article details</h1>
+<div class="container text-center mt-5">
+    <h1> <%= @article.title %> </h1>
+    <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+            <div class="card text-center mb-5 shadow bg-white rounded">
+                <div class="card-header">
+                By Stephen Filippov
+                </div>
+                <div class="card-body">
+                    <div class="card-text text-left" > <%= simple_format(@article.description) %> </div>
+                    <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
+                    <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+                </div>
+                <div class="card-footer text-muted">
+                    <small>Created <%= time_ago_in_words(@article.created_at)%> ago, Edited <%= time_ago_in_words(@article.updated_at)%> ago</small>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong> <%= @article.description %></p>
+<div class="container text-center">
+    <%= link_to '[ Back', articles_path%> | <%= link_to 'Edit', edit_article_path(@article)%> | <%= link_to 'Delete ]', article_path(@article), method: :delete, data: {confirm: "Are you sure?"}%>
+</div>
 
-<%= link_to 'Back', articles_path%> | <%= link_to 'Edit', edit_article_path(@article)%> | <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Are you sure?"}%>
