--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-  <% flash.each do |name, msg| %> <!-- inserts the flash into the page where it runs  -->
-    <%= msg %>
-  <% end %>
+  <body class="d-flex flex-column" >
+    <%= render 'layouts/navigation' %>
+    <div id="page-content">
+    <%= render 'layouts/messages' %>
     <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
