--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>Welcome to the home page</h1>
 
-<%= link_to 'Articles listing', articles_path%> |
-<%= link_to 'About page', about_path%>
+<div class="jumbotron text-white">
+    <h1 class="display-3">Alpha Blog</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Sign up!</a>
+</div>
