--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
       <div class="col-8 mt-4">
         <div class="card text-center mb-5 shadow bg-white rounded">
             <div class="card-header">
-              Stephen Filippov
+              by <%= article.user.username if article.user%>
             </div>
             <div class="card-body">
               <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
