--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
         <div class="col-8 mt-4">
             <div class="card text-center mb-5 shadow bg-white rounded">
                 <div class="card-header">
-                By Stephen Filippov
+                By <%= @article.user.username if @article.user%>
                 </div>
                 <div class="card-body">
                     <div class="card-text text-left" > <%= simple_format(@article.description) %> </div>
