--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,5 @@
 <div class="push">
-  <h1 class="text-center">Articles listing page</h1>
-
-  <div class="container text-center">
-  <%= link_to 'Create new article', new_article_path%>
-  </div>
+  <h1 class="text-center my-5">Articles listing page</h1>
 
   <div class="container">
     <% @articles.each do |article|%>
