--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,7 @@
 <div class="push">
 <div class="container">
 
-    <h1>Create a new article</h1>
+    <h1 class="my-3" >Create a new article</h1>
     <%= render 'form' %>
 
 </div>
