--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,11 @@
     <%= form.password_field :password, class: 'form-control', placeholder: "Choose a password" %>
   </div>
   <div class="form-group row">
-    <%= form.submit "Sign Up", class: "btn btn-outline-dark btn-lg" %>
+    <%= form.submit(@user.new_record? ? "Sign Up" : "Update account", class: "btn btn-outline-dark btn-lg") %>
   </div>
 <% end %>
+
+<div class="container text-center my-5">
+  <%= link_to '[ Cancel and return to articles listing ]', articles_path %>
+</div>
 
