--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="push">
 <div class="container">
 
-    <h1 class="my-3" >Sign up for Alpha Blog</h1>
+    <h1 class="my-3" >Edit your profile</h1>
     <%= render 'form' %>
 
 </div>
