User profile and user show action

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,13 @@ form button:hover {
     margin-top: 20px;
 }
 
+.profile-card {
+    background-repeat: no-repeat, repeat;
+    background-color: #cccccc;
+    background-size: cover;
+    margin: auto;
+}
+
 
 
 
