--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,14 +7,9 @@
     --third-color: rgb(255, 255, 255);
   }
 
-
-
-  .align-vertical {
-      display: flex !important;
-      flex-direction: column !important;
-      justify-content: center !important;
-    //   align-items: center !important;
-  }
+.px-6 {
+    padding: 5px 60px;
+}
 
 html,
 body {
@@ -113,6 +108,36 @@ form button:hover {
     margin: auto;
 }
 
+.flickr_pagination {
+    text-align: center;
+    padding: 0.3em;
+    cursor: default; }
+    .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+      padding: 0.2em 0.5em; }
+    .flickr_pagination .disabled {
+      color: #aaaaaa; }
+    .flickr_pagination .current {
+      font-style: normal;
+      font-weight: bold;
+      color: #ff0084; }
+    .flickr_pagination a {
+      border: 1px solid var(--main-color) !important;
+      padding: 5px 10px !important;
+      border-radius: 5px;
+      color: var(--main-color);
+      text-decoration: none; }
+      .flickr_pagination a:hover, .flickr_pagination a:focus {
+        background: var(--main-color);
+        color: white; }
+    .flickr_pagination .page_info {
+      color: #aaaaaa;
+      padding-top: 0.8em; }
+    .flickr_pagination .previous_page, .flickr_pagination .next_page {
+      border-width: 2px; }
+    .flickr_pagination .previous_page {
+      margin-right: 1em; }
+    .flickr_pagination .next_page {
+      margin-left: 1em; }
 
 
 
