--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,9 +1,11 @@
 <% @articles.each do |article|%>
 <div class="row justify-content-md-center">
-    <div class="col-8 mt-4">
+    <div class="col-8">
     <div class="card text-center mb-5 shadow bg-white rounded">
         <div class="card-header">
-            by <%= article.user.username if article.user%>
+            <% if article.user %>
+                by <%= link_to article.user.username, user_path(article.user)%>
+            <% end %>
         </div>
         <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
