--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,13 @@
 <div class="push">
   <h1 class="text-center my-5">Articles listing page</h1>
-  <div class="container">
+  <div class="flickr_pagination">
+    <%= will_paginate @articles, :container => false %>
+  </div>
+  <div class="container mt-4">
      <%= render 'article' %>
+  </div>
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate @articles, :container => false %>
   </div>
 </div>
 
