--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,14 @@
- <div class="container text-center push">
-    <h1><%= @user.username %> profile</h1>
-    <div class="card profile-card" style="width: 18rem; height: 18rem;">
+ <div class="container text-center mt-5">
+    <h1 class="my-3"><%= @user.username %> profile</h1>
+    <div class="my-2">
         <%= gravatar_for @user, size: 200%>
     </div>
+     <%= link_to "Edit profile", edit_user_path(@user), class: "btn btn-outline-info my-2 px-6"%>
+    <h2 class="mt-3">Articles</h2>
 </div>
- 
- <div class="container push">
-    <%= render 'articles/article'%>
+<div class="flickr_pagination my-4">
+    <%= will_paginate @articles, :container => false %>
+</div>
+ <div class="container">
+    <%= render 'articles/article' %>
 </div>
