--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
+
 :root {
     --main-color: rgb(255, 38, 110);
     --secondary-color: rgb(65, 65, 65);
@@ -49,20 +50,22 @@ form button:hover {
 
 .jumbotron {
     background-image: asset-url('jumbo3.jpeg');
+    height: 75%;
     background-repeat: no-repeat, repeat;
     background-color: #cccccc;
     background-size: cover;
-    text-align: center;
     background-position: center center;
-    height: 100vh;
-    margin: 0px;
-    border-radius: 0px;
+    border-radius: 7px;
+    background-blend-mode:darken;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-blend-mode:darken;
-    position: relative;
+}
+
+.jumbotron p,.jumbotron h1 {
+    text-shadow: 0px 2px 10px black;
 }
 
 .jumbotron a {
@@ -138,6 +141,7 @@ form button:hover {
       margin-right: 1em; }
     .flickr_pagination .next_page {
       margin-left: 1em; }
+
 
 
 
