--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,7 +16,9 @@
                 </div>
                 <h5 class="my-3"> <%= pluralize(user.articles.count, "article")%> </h5>
                 <%= link_to 'View profile', user, class: "btn btn-outline-success" %>
-                <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                <% if logged_in? && user == current_user%>
+                    <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                <% end %>
             </div>
             <div class="card-footer text-muted">
                 <small>Joined <%= time_ago_in_words(user.created_at)%> ago</small>
