--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,8 +16,13 @@
                 </div>
                 <h5 class="my-3"> <%= pluralize(user.articles.count, "article")%> </h5>
                 <%= link_to 'View profile', user, class: "btn btn-outline-success" %>
-                <% if logged_in? && user == current_user%>
-                    <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                <% if logged_in?%>
+                    <% if current_user == user%>
+                        <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                    <% end %>
+                    <% if current_user.admin? %>
+                        <%= link_to "Delete user?", user_path(user), class: "btn btn-outline-danger",method: :delete, data: {confirm: "Are you sure?"} %>
+                    <% end %>
                 <% end %>
             </div>
             <div class="card-footer text-muted">
