--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,6 +10,10 @@
     <label>Description</label><br>
     <%= form.text_area :description, rows: 10, class: 'form-control', placeholder: "Description of article" %>
   </div>
+  <div class="form-group row" style="display: flex; flex-direction: column;" >
+    <label>Category</label>
+    <%= form.collection_select( :category_ids, Category.all, :id, :name, { prompt: "Make your selection from the list below (can be empty)"}, {multiple: true, class: "custom-select"})%>
+  </div>
     <div class="form-group row">
       <%= form.submit class: "btn btn-outline-dark btn-lg" %>
     </div>
