--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,9 @@
                     <div class="py-2">
                         <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
                     </div>
+                    <% if @article.categories.any?%>
+                        <div class="my-2" ><%= render @article.categories %></div>
+                    <% end %>
                 </div>
                 <div class="card-body">
                     <div class="card-text text-left" > <%= simple_format(@article.description) %> </div>
