--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,6 +10,7 @@
     <div class="card text-center mb-5 shadow bg-white rounded">
         <div class="card-body">
             <h5 class="card-title"><%= link_to category.name, category_path(category), class: 'text-success' %></h5>
+            <h5 class="my-3"> <%= pluralize(category.articles.count, "article")%> </h5>
         </div>
         <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(category.created_at)%> ago, Edited <%= time_ago_in_words(category.updated_at)%> ago</small>
