--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,14 @@
-    <h1 class="my-3 text-center">Category: <%= @category.name %></h1>
+<h1 class="my-3 text-center">Category: <%= @category.name %></h1>
+
+ <div class="container text-center mt-5">
+    <% if logged_in? && current_user.admin?%>
+        <%= link_to "Edit category", edit_category_path(@category), class: "btn btn-outline-info my-2 px-6"%>
+    <% end %>
+    <h2 class="mt-3">Articles</h2>
+</div>
+<div class="flickr_pagination my-4">
+    <%= will_paginate @articles, :container => false %>
+</div>
+ <div class="container">
+    <%= render 'articles/article' %>
+</div>
