--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="container text-center" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh" >
-    <div class="jumbotron text-white" >
+<div class="container text-center my-0" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;" >
+    <div class="jumbotron text-white my-0" >
         <h1 class="display-3">Alpha Blog</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
