--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,6 +51,7 @@ form button:hover {
 .jumbotron {
     background-image: asset-url('jumbo3.jpeg');
     height: 75%;
+    width: 100%;
     background-repeat: no-repeat, repeat;
     background-color: #cccccc;
     background-size: cover;
