--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container text-center my-0" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;" >
     <div class="jumbotron text-white my-0" >
         <h1 class="display-3">Alpha Blog</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">This is a blog where you can post what you want</p>
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <%= link_to "Sign up!", signup_path, class: "btn btn-primary btn-lg px-5", role: "button" %>
     </div>
